--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -4,7 +4,7 @@
     <% lists.each do |list| %>
       <%= link_to list do %>
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-      url(<%= list.poster_url %>)">
+      url(<%= list.image_url %>)">
       <%= list.name %>
       </div>
     <% end %>
