--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -8,6 +8,16 @@
   </div>
 
   <hr>
-  <%= render 'lists/list', lists: @lists %>
+
+  <div class="cards">
+    <% @lists.each do |list| %>
+      <%= link_to list do %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+      url(<%= list.image_url %>)">
+      <%= list.name %>
+      </div>
+    <% end %>
+  <% end %>
+  </div>
 
 </div>
