--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,25 +1,32 @@
 <%= render 'shared/navbar' %>
-<%= render 'individual', list: @list %>
 
-
-
-<div class="container mt-3">
-  <div class="d-flex justify-content-between align-items-center">
-    <h3> <%= @list.name %> lists</h3>
-    <%= link_to 'Add a movie', new_list_bookmark_path(@list), class: 'btn btn-primary' %>
-
+<div id="<%= dom_id @list %>">
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= @list.image_url %>);">
+    <div class="container">
+      <h1><%= @list.name %></h1>
+    </div>
   </div>
 
-  <hr>
+  <div class="container mt-3">
+    <div class="d-flex justify-content-between align-items-center">
+      <h3> <%= @list.name %> lists</h3>
+      <%= link_to 'Add a movie', new_list_bookmark_path(@list), class: 'btn btn-primary' %>
+    </div>
 
-  <div class="cards mt-3">
-    <div class="card-trip">
-      <% @list.bookmarks.each do |bookmark| %>
-      <img src="<%= bookmark.movie.poster_url %>" />
-        <div class="card-trip-infos">
-          <h2><%= bookmark.movie.title %></h2>
-          <p><%= bookmark.movie.overview %></p>
-        </div>
-      <% end %>
+    <hr>
+
+    <div class="cards">
+
+        <% @list.bookmarks.each do |bookmark| %>
+          <div class="card-trip">
+            <img src="<%= bookmark.movie.poster_url %>" />
+            <div class="card-trip-infos">
+              <h2><%= bookmark.movie.title %></h2>
+              <p><%= bookmark.movie.overview %></p>
+            </div>
+          </div>
+        <% end %>
+
+    </div>
   </div>
 </div>
