trying to do heroku

--- a/app/assets/stylesheets/components/_card_trip.scss
+++ b/app/assets/stylesheets/components/_card_trip.scss
@@ -26,7 +26,8 @@
 .card-trip .card-trip-infos {
   padding: 16px;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  // justify-content: space-between;
+  // align-items: flex-end;
+  flex-direction: column;
   position: relative;
 }
