--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -23,6 +23,9 @@
             <div class="card-trip-infos">
               <h2><%= bookmark.movie.title %></h2>
               <p><%= bookmark.movie.overview %></p>
+              <%= link_to "Delete",
+              list_path(@list),
+              data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
             </div>
           </div>
         <% end %>
