--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -24,7 +24,7 @@
               <h2><%= bookmark.movie.title %></h2>
               <p><%= bookmark.movie.overview %></p>
               <%= link_to "Delete",
-              list_path(@list),
+              bookmark_path(bookmark),
               data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
             </div>
           </div>
