--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -4,7 +4,8 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :image_url %>
+    <%#= f.input :image_url  FIX THIS LATER %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
