--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,8 +12,7 @@
   <div class="cards">
     <% @lists.each do |list| %>
       <%= link_to list do %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-      url(<%= list.image_url %>)">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),url(<%= cl_image_path list.photo.key %>)" >
       <%= list.name %>
       </div>
     <% end %>
