--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,8 @@
 <%= render 'shared/navbar' %>
 
 <div id="<%= dom_id @list %>">
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= @list.image_url %>);">
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(<%= cl_image_path @list.photo.key %>)" >
+  raise
     <div class="container">
       <h1><%= @list.name %></h1>
     </div>
