--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,13 @@
 <%= render 'shared/navbar' %>
 
+<div id="<%= dom_id @list %>">
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(<%= cl_image_path @list.photo.key %>)" >
+    <div class="container">
+      <h1><%= @list.name %></h1>
+    </div>
+  </div>
+</div>
+
 <div class="container m-5">
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.association :movie, collection: Movie.all.order(:title) %>
