--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="container mt-3">
   <div class="d-flex justify-content-between align-items-center">
-    <h3>All movies lists</h3>
+    <h4>List Selection</h4>
     <%= link_to 'New List', new_list_path, class: 'btn btn-primary' %>
   </div>
 
