--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,13 +9,16 @@
 
   <div class="container mt-3">
     <div class="d-flex justify-content-between align-items-center">
-      <h3> <%= @list.name %> lists</h3>
+      <h4></h4>
+      <div>
+      <%= link_to 'Delete this list', list_path(@list), class: "btn btn-danger", data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this list?" }%>
       <%= link_to 'Add a movie', new_list_bookmark_path(@list), class: 'btn btn-primary' %>
+      </div>
     </div>
 
     <hr>
 
-    <div class="cards">
+    <div class="cards mb-3">
 
         <% @list.bookmarks.each do |bookmark| %>
           <div class="card-trip">
@@ -23,9 +26,14 @@
             <div class="card-trip-infos">
               <h2><%= bookmark.movie.title %></h2>
               <p><%= bookmark.movie.overview %></p>
+              <hr>
+              <div class="d-flex justify-content-between align-items-center">
+              <p><%= bookmark.comment %></p>
               <%= link_to "Delete",
               bookmark_path(bookmark),
+              class: "btn btn-danger",
               data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
+              </div>
             </div>
           </div>
         <% end %>
