review buggado pls fix

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -12,6 +12,6 @@
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.association :movie, collection: Movie.all.order(:title) %>
   <%= f.input :comment %>
-  <%= f.submit "Add movie", class: "btn btn-flat" %>
+  <%= f.submit "Add movie", class: "btn btn-primary" %>
 <% end %>
 </div>
