--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -67,7 +67,7 @@
           <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
             <%= f.input :comment %>
-            <%= f.input :rating %>
+            <%= f.input :rating, collection: 0..5 %>
             <%= f.submit class: 'btn btn-success' %>
           <% end %>
         </div>
